# shadowpartner

./: .gitignore  LICENSE  README.md
.claude/: project-context.md
backend/: .env.example  check_env.py  lifecycle.py  main.py  middleware.py  models.py  processing.py  pyproject.toml  routes.py  services_registry.py  settings.py  setup_deno.py  setup_ffmpeg.py  state.py  test_calibration.py  test_subtitle_linearizer.py  test_subtitle_matching.py  test_youtube_download.py  uploads.py  verify_user_example.py
backend/services/: aligner.py  analyzer.py  downloader.py  subtitle_linearizer.py  transcriber.py  translator.py  video_utils.py
backend/tests/: test_calibration.py  test_subtitle_linearizer.py  test_subtitle_matching.py  test_youtube_download.py
backend/utils/: __init__.py  logger.py  path_setup.py  task_manager.py
frontend/: index.html  manifest.json  service-worker.js
frontend/css/: style.css
frontend/js/: app.js  mock.js
plans/: calibration_design.md  plan.md  subtitle_linearization_design.md  subtitle_matching_design.md
