[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "mecab-python3>=1.0.12",
    "nodeenv>=1.10.0",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "unidic-lite>=1.0.8",
    "uvicorn[standard]>=0.40.0",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
# 设定行长为 100
line-length = 100
# 目标 Python 版本
target-version = "py311"

[tool.ruff.lint]
# 启用 Pyflakes (`E`), pycodestyle (`F`), 和 isort (`I`)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# 使用双引号 (默认)
quote-style = "double"
# 缩进风格 (默认空格)
indent-style = "space"
